<resources>
    <string name="app_name">Programmer Calculator</string>

    <string name="btn_a">A</string>
    <string name="btn_b">B</string>
    <string name="btn_c">C</string>
    <string name="btn_d">D</string>
    <string name="btn_e">E</string>
    <string name="btn_f">F</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_equals">=</string>
    <string name="btn_clear">AC</string>
    <string name="btn_backspace">⌫</string>
    <string name="btn_decimal">.</string>
    <string name="decimal">DEC</string>
    <string name="binary">BIN</string>
    <string name="octal">OCT</string>
    <string name="hexadecimal">HEX</string>
    <string name="to">to</string>
    <string name="arrow_down_icon">Arrow down Icon representing the conversion direction</string>

</resources>