<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingHorizontal="20dp"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/input_type_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_8x"
        android:background="@drawable/bg_rounded"
        android:backgroundTint="@color/low_emphasis"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/size_1x"
        app:layout_constraintBottom_toTopOf="@+id/iv_arrow_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/from_radio_decimal"
            style="@style/RadioStyle"
            android:layout_marginEnd="@dimen/size_2x"
            android:onClick="onInputTypeRadioButtonClick"
            android:text="@string/decimal" />

        <RadioButton
            android:id="@+id/from_radio_binary"
            style="@style/RadioStyle"
            android:layout_marginEnd="@dimen/size_2x"
            android:onClick="onInputTypeRadioButtonClick"
            android:text="@string/binary" />

        <RadioButton
            android:id="@+id/from_radio_octal"
            style="@style/RadioStyle"
            android:layout_marginEnd="@dimen/size_2x"
            android:onClick="onInputTypeRadioButtonClick"
            android:text="@string/octal" />

        <RadioButton
            android:id="@+id/from_radio_hexadecimal"
            style="@style/RadioStyle"
            android:onClick="onInputTypeRadioButtonClick"
            android:text="@string/hexadecimal" />

    </RadioGroup>

    <ImageView
        android:id="@+id/iv_arrow_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/arrow_down_icon"
        android:src="@drawable/ic_arrow_down"
        app:layout_constraintBottom_toTopOf="@+id/output_type_radio_group"
        app:layout_constraintEnd_toEndOf="@id/input_type_radio_group"
        app:layout_constraintStart_toStartOf="@id/input_type_radio_group"
        app:layout_constraintTop_toBottomOf="@+id/input_type_radio_group" />

    <RadioGroup
        android:id="@+id/output_type_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bg_rounded"
        android:backgroundTint="@color/low_emphasis"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/size_1x"
        app:layout_constraintBottom_toTopOf="@+id/tv_input"
        app:layout_constraintEnd_toEndOf="@+id/input_type_radio_group"
        app:layout_constraintStart_toStartOf="@+id/input_type_radio_group"
        app:layout_constraintTop_toBottomOf="@id/iv_arrow_down">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/to_radio_decimal"
            style="@style/RadioStyle"
            android:layout_marginEnd="@dimen/size_2x"
            android:text="@string/decimal" />

        <RadioButton
            android:id="@+id/to_radio_binary"
            style="@style/RadioStyle"
            android:layout_marginEnd="@dimen/size_2x"
            android:text="@string/binary" />

        <RadioButton
            android:id="@+id/to_radio_octal"
            style="@style/RadioStyle"
            android:layout_marginEnd="@dimen/size_2x"
            android:text="@string/octal" />

        <RadioButton
            android:id="@+id/to_radio_hexadecimal"
            style="@style/RadioStyle"
            android:text="@string/hexadecimal" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="2dp"
        android:alpha="0.4"
        android:gravity="end"
        android:maxLength="12"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="@dimen/size_9x"
        app:layout_constraintBottom_toTopOf="@+id/sv_output"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/output_type_radio_group" />

    <HorizontalScrollView
        android:id="@+id/sv_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_input">

        <TextView
            android:id="@+id/tv_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_25x" />
    </HorizontalScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_clear"
        style="@style/ButtonStyle.HighEmphasis"
        android:layout_width="0dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/orange"
        android:onClick="onActionClick"
        android:text="@string/btn_clear"
        app:layout_constraintBottom_toTopOf="@+id/btn_7"
        app:layout_constraintEnd_toStartOf="@+id/btn_f"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv_output" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_f"
        style="@style/ButtonStyle.MediumEmphasis"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:onClick="onDigitClick"
        android:text="@string/btn_f"
        app:layout_constraintEnd_toStartOf="@+id/btn_e"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_clear"
        app:layout_constraintTop_toTopOf="@+id/btn_clear" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_e"
        style="@style/ButtonStyle.MediumEmphasis"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:onClick="onDigitClick"
        android:text="@string/btn_e"
        app:layout_constraintEnd_toStartOf="@+id/btn_d"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_f"
        app:layout_constraintTop_toTopOf="@+id/btn_clear" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_d"
        style="@style/ButtonStyle.MediumEmphasis"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:onClick="onDigitClick"
        android:text="@string/btn_d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_e"
        app:layout_constraintTop_toTopOf="@+id/btn_clear" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_7"
        style="@style/ButtonStyle.LowEmphasis"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:onClick="onDigitClick"
        android:text="@string/btn_7"
        app:layout_constraintBottom_toTopOf="@+id/btn_4"
        app:layout_constraintEnd_toEndOf="@+id/btn_clear"
        app:layout_constraintStart_toStartOf="@+id/btn_clear"
        app:layout_constraintTop_toBottomOf="@+id/btn_clear" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_8"
        style="@style/ButtonStyle.LowEmphasis"
        android:layout_width="0dp"
        android:onClick="onDigitClick"
        android:text="@string/btn_8"
        app:layout_constraintEnd_toEndOf="@+id/btn_f"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_f"
        app:layout_constraintTop_toTopOf="@+id/btn_7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_9"
        style="@style/ButtonStyle.LowEmphasis"
        android:layout_width="0dp"
        android:onClick="onDigitClick"
        android:text="@string/btn_9"
        app:layout_constraintEnd_toEndOf="@+id/btn_e"
        app:layout_constraintStart_toStartOf="@+id/btn_e"
        app:layout_constraintTop_toTopOf="@+id/btn_7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_c"
        style="@style/ButtonStyle.MediumEmphasis"
        android:layout_width="0dp"
        android:onClick="onDigitClick"
        android:text="@string/btn_c"
        app:layout_constraintEnd_toEndOf="@+id/btn_d"
        app:layout_constraintStart_toStartOf="@+id/btn_d"
        app:layout_constraintTop_toTopOf="@+id/btn_7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_4"
        style="@style/ButtonStyle.LowEmphasis"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:onClick="onDigitClick"
        android:text="@string/btn_4"
        app:layout_constraintBottom_toTopOf="@+id/btn_1"
        app:layout_constraintEnd_toEndOf="@+id/btn_7"
        app:layout_constraintStart_toStartOf="@+id/btn_7"
        app:layout_constraintTop_toBottomOf="@+id/btn_7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_5"
        style="@style/ButtonStyle.LowEmphasis"
        android:layout_width="0dp"
        android:onClick="onDigitClick"
        android:text="@string/btn_5"
        app:layout_constraintEnd_toEndOf="@+id/btn_8"
        app:layout_constraintStart_toStartOf="@+id/btn_8"
        app:layout_constraintTop_toTopOf="@+id/btn_4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_6"
        style="@style/ButtonStyle.LowEmphasis"
        android:layout_width="0dp"
        android:onClick="onDigitClick"
        android:text="@string/btn_6"
        app:layout_constraintEnd_toEndOf="@+id/btn_9"
        app:layout_constraintStart_toStartOf="@+id/btn_9"
        app:layout_constraintTop_toTopOf="@+id/btn_4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_b"
        style="@style/ButtonStyle.MediumEmphasis"
        android:layout_width="0dp"
        android:onClick="onDigitClick"
        android:text="@string/btn_b"
        app:layout_constraintEnd_toEndOf="@+id/btn_c"
        app:layout_constraintStart_toStartOf="@+id/btn_c"
        app:layout_constraintTop_toTopOf="@+id/btn_4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_1"
        style="@style/ButtonStyle.LowEmphasis"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:onClick="onDigitClick"
        android:text="@string/btn_1"
        app:layout_constraintBottom_toTopOf="@+id/btn_0"
        app:layout_constraintEnd_toEndOf="@+id/btn_4"
        app:layout_constraintStart_toStartOf="@+id/btn_4"
        app:layout_constraintTop_toBottomOf="@+id/btn_4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_2"
        style="@style/ButtonStyle.LowEmphasis"
        android:layout_width="0dp"
        android:onClick="onDigitClick"
        android:text="@string/btn_2"
        app:layout_constraintEnd_toEndOf="@+id/btn_5"
        app:layout_constraintStart_toStartOf="@+id/btn_5"
        app:layout_constraintTop_toTopOf="@+id/btn_1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_3"
        style="@style/ButtonStyle.LowEmphasis"
        android:layout_width="0dp"
        android:onClick="onDigitClick"
        android:text="@string/btn_3"
        app:layout_constraintEnd_toEndOf="@+id/btn_6"
        app:layout_constraintStart_toStartOf="@+id/btn_6"
        app:layout_constraintTop_toTopOf="@+id/btn_1" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_a"
        style="@style/ButtonStyle.MediumEmphasis"
        android:layout_width="0dp"
        android:onClick="onDigitClick"
        android:text="@string/btn_a"
        app:layout_constraintEnd_toEndOf="@+id/btn_b"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_b"
        app:layout_constraintTop_toTopOf="@+id/btn_1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_equals"
        style="@style/ButtonStyle.HighEmphasis"
        android:layout_width="0dp"
        android:onClick="onActionClick"
        android:text="@string/btn_equals"
        app:layout_constraintBottom_toBottomOf="@+id/btn_0"
        app:layout_constraintEnd_toEndOf="@+id/btn_a"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_3"
        app:layout_constraintTop_toTopOf="@+id/btn_0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_0"
        style="@style/ButtonStyle.LowEmphasis"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="57dp"
        android:onClick="onDigitClick"
        android:text="@string/btn_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_1"
        app:layout_constraintTop_toBottomOf="@+id/btn_1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_backspace"
        style="@style/ButtonStyle.MediumEmphasis"
        android:layout_width="0dp"
        android:onClick="onActionClick"
        android:text="@string/btn_backspace"
        app:layout_constraintBottom_toBottomOf="@+id/btn_0"
        app:layout_constraintEnd_toEndOf="@+id/btn_2"
        app:layout_constraintStart_toStartOf="@+id/btn_2"
        app:layout_constraintTop_toTopOf="@+id/btn_0" />


</androidx.constraintlayout.widget.ConstraintLayout>